src/main/java/com/example/cto/error/exceptions/UserAlreadyExistException.java
package com.example.cto.error.exceptions;

public class UserAlreadyExistException extends RuntimeException{
    public UserAlreadyExistException(String message) {
        super(message);
    }
}
